src/cs/production/Remotery/PInvoke.gen.cs


// <auto-generated>
//  This code was generated by the following tool on 2023-07-30 03:19:30 GMT-04:00:
//      https://github.com/bottlenoselabs/c2cs (v6.1.2.0)
//
//  Changes to this file may cause incorrect behavior and will be lost if the code is regenerated.
// </auto-generated>
// ReSharper disable All

#region Template
#nullable enable
#pragma warning disable CS1591
#pragma warning disable CS8981
using bottlenoselabs.C2CS.Runtime;
using System;
using System.Collections.Generic;
using System.Globalization;
using System.Runtime.InteropServices;
using System.Runtime.CompilerServices;
#endregion

using System.Numerics;
using static Remotery.PInvoke;

namespace Remotery;

public static unsafe partial class PInvoke
{
    private const string LibraryName = "Remotery";

    #region API

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "dummy")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void Dummy();

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_BeginCPUSample")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtBeginCPUSample(RmtPStr name, RmtU32 flags, RmtU32* hashCache);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_CreateGlobalInstance")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtError RmtCreateGlobalInstance(Remotery** remotery);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_DestroyGlobalInstance")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtDestroyGlobalInstance(Remotery* remotery);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_EndCPUSample")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtEndCPUSample();

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_GetGlobalInstance")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial Remotery* RmtGetGlobalInstance();

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "rmt_GetLastErrorMessage")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtPStr RmtGetLastErrorMessage();

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_HashString32")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtU32 RmtHashString32(CString s, int len, RmtU32 seed);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_IterateChildren")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtIterateChildren(RmtSampleIterator* iter, RmtSample* sample);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_IterateNext")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtBool RmtIterateNext(RmtSampleIterator* iter);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_LogText")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtLogText(RmtPStr text);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_MarkFrame")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtError RmtMarkFrame();

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyAddValue")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtPropertyAddValue(RmtProperty* property, RmtPropertyValue addValue);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyFrameResetAll")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtPropertyFrameResetAll();

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyGetDescription")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial CString RmtPropertyGetDescription(RmtProperty* property);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyGetName")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial CString RmtPropertyGetName(RmtProperty* property);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyGetNameHash")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtU32 RmtPropertyGetNameHash(RmtProperty* property);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyGetType")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtPropertyType RmtPropertyGetType(RmtProperty* property);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyGetValue")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtPropertyValue RmtPropertyGetValue(RmtProperty* property);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyIterateChildren")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtPropertyIterateChildren(RmtPropertyIterator* iter, RmtProperty* property);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertyIterateNext")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtBool RmtPropertyIterateNext(RmtPropertyIterator* iter);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertySetValue")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtPropertySetValue(RmtProperty* property);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_PropertySnapshotAll")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtError RmtPropertySnapshotAll();

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleGetCallCount")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtU32 RmtSampleGetCallCount(RmtSample* sample);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleGetColour")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtSampleGetColour(RmtSample* sample, RmtU8* r, RmtU8* g, RmtU8* b);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleGetName")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial CString RmtSampleGetName(RmtSample* sample);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleGetNameHash")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtU32 RmtSampleGetNameHash(RmtSample* sample);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleGetSelfTime")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtU64 RmtSampleGetSelfTime(RmtSample* sample);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleGetStart")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtU64 RmtSampleGetStart(RmtSample* sample);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleGetTime")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtU64 RmtSampleGetTime(RmtSample* sample);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleGetType")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtSampleType RmtSampleGetType(RmtSample* sample);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleTreeGetRootSample")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial RmtSample* RmtSampleTreeGetRootSample(RmtSampleTree* sampleTree);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SampleTreeGetThreadName")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial CString RmtSampleTreeGetThreadName(RmtSampleTree* sampleTree);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SetCurrentThreadName")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtSetCurrentThreadName(RmtPStr threadName);

    [CNode(Kind = "Function")]
    [LibraryImport(LibraryName, EntryPoint = "_rmt_SetGlobalInstance")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RmtSetGlobalInstance(Remotery* remotery);

    // [CNode(Kind = "Function")]
    // [LibraryImport(LibraryName, EntryPoint = "_rmt_Settings")]
    // [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    // public static partial RmtSettings* RmtSettings();

    #endregion

    #region Types

    [CNode(Kind = "FunctionPointer")]
    [StructLayout(LayoutKind.Sequential)]
    public struct FnPtr_CString_VoidPtr_Void
    {
        public delegate* unmanaged<CString, void*, void> Pointer;
    }

    [CNode(Kind = "FunctionPointer")]
    [StructLayout(LayoutKind.Sequential)]
    public struct FnPtr_VoidPtr_RmtPropertyPtr_Void
    {
        public delegate* unmanaged<void*, RmtProperty*, void> Pointer;
    }

    [CNode(Kind = "FunctionPointer")]
    [StructLayout(LayoutKind.Sequential)]
    public struct FnPtr_VoidPtr_RmtSampleTreePtr_Void
    {
        public delegate* unmanaged<void*, RmtSampleTree*, void> Pointer;
    }

    [CNode(Kind = "FunctionPointer")]
    [StructLayout(LayoutKind.Sequential)]
    public struct FnPtr_VoidPtr_RmtU32_VoidPtr
    {
        public delegate* unmanaged<void*, RmtU32, void*> Pointer;
    }

    [CNode(Kind = "FunctionPointer")]
    [StructLayout(LayoutKind.Sequential)]
    public struct FnPtr_VoidPtr_VoidPtr_RmtU32_VoidPtr
    {
        public delegate* unmanaged<void*, void*, RmtU32, void*> Pointer;
    }

    [CNode(Kind = "FunctionPointer")]
    [StructLayout(LayoutKind.Sequential)]
    public struct FnPtr_VoidPtr_VoidPtr_Void
    {
        public delegate* unmanaged<void*, void*, void> Pointer;
    }

    [CNode(Kind = "Struct")]
    [StructLayout(LayoutKind.Explicit, Size = 64, Pack = 8)]
    public struct RmtCUDABind
    {
        [FieldOffset(0)] // size = 8
        public void* Context;

        [FieldOffset(8)] // size = 8
        public void* CtxSetCurrent;

        [FieldOffset(16)] // size = 8
        public void* CtxGetCurrent;

        [FieldOffset(24)] // size = 8
        public void* EventCreate;

        [FieldOffset(32)] // size = 8
        public void* EventDestroy;

        [FieldOffset(40)] // size = 8
        public void* EventRecord;

        [FieldOffset(48)] // size = 8
        public void* EventQuery;

        [FieldOffset(56)] // size = 8
        public void* EventElapsedTime;
    }

    [CNode(Kind = "Struct")]
    [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
    public struct RmtD3D12Bind
    {
        [FieldOffset(0)] // size = 8
        public void* Device;
